Work with Italic and Bold text. Using only HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 
 
 <body>
-    My first Website
+    <p>My first Website</p>
+
+    <h1>Italic and Bold Check</h1>
+
+    <p><strong>1952 and 1954, John Raymond</strong>published three science fiction magazines 
+        and a fantasy magazine. Raymond, an American publisher of men's magazines who knew 
+        little about science fiction, hired Lester del Rey to edit the digest-size magazines. 
+        <em>Space Science Fiction and Science Fiction</em>Adventures appeared in 1952, followed by Rocket Stories, which targeted a younger audience, 
+        and Fantasy Magazine (pictured), which published fantasy rather than science fiction. All four were profitable, 
+        but Raymond did not reinvest the profits into the magazines, and paid contributors late. When del Rey discovered that Raymond was planning to cut rates, he resigned. 
+        Two of the magazines continued briefly with Harry Harrison as editor, but all ceased publication by the end of 1954. The magazines are well-regarded by science fiction historians, 
+        and carried fiction by many writers well known in the field, 
+        or who would later become famous, including Isaac Asimov, 
+        Philip K. Dick, Robert E. Howard, and John Jakes.</p>
 </body>
 
 
