Added 2 page to website and worked with links

--- a/page2.html
+++ b/page2.html
@@ -13,11 +13,11 @@
 
     <h1>Italic and Bold Check</h1>
     <!-- comment in HTML -->
-    <p><strong>1952 and 1954, John Raymond</strong>published three science fiction magazines 
+    <p><strong>1952 and 1954, John Raymond published three science fiction magazines 
         and a fantasy magazine. Raymond, an American publisher of men's magazines who knew 
         little about science fiction, hired Lester del Rey to edit the digest-size magazines. 
         <em>Space Science Fiction and Science Fiction</em>Adventures appeared in 1952, followed by Rocket Stories, which targeted a younger audience, 
-        and <a href="page2.html">Fantasy Magazine</a>(pictured), which published fantasy rather than science fiction. All four were profitable, 
+        and <a href="https:www.google.com">Fantasy Magazine</a>(pictured), which published fantasy rather than science fiction. All four were profitable, 
         but Raymond did not reinvest the profits into the magazines, and paid contributors late. When del Rey discovered that Raymond was planning to cut rates, he resigned. 
         Two of the magazines continued briefly with Harry Harrison as editor, but all ceased publication by the end of 1954. The magazines are well-regarded by science fiction historians, 
         and carried fiction by many writers well known in the field, 
