First try to make website with good information

--- a/index.html
+++ b/index.html
@@ -4,25 +4,47 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My first Website</title>
+    <title>What is HTML</title>
 </head>
 
 
 <body>
-    <p>My first Website</p>
-
-    <h1>Italic and Bold Check</h1>
-    <!-- comment in HTML -->
-    <p><strong>1952 and 1954, John Raymond</strong>published three science fiction magazines 
-        and a fantasy magazine. Raymond, an American publisher of men's magazines who knew 
-        little about science fiction, hired Lester del Rey to edit the digest-size magazines. 
-        <em>Space Science Fiction and Science Fiction</em>Adventures appeared in 1952, followed by Rocket Stories, which targeted a younger audience, 
-        and <a href="page2.html">Fantasy Magazine</a>(pictured), which published fantasy rather than science fiction. All four were profitable, 
-        but Raymond did not reinvest the profits into the magazines, and paid contributors late. When del Rey discovered that Raymond was planning to cut rates, he resigned. 
-        Two of the magazines continued briefly with Harry Harrison as editor, but all ceased publication by the end of 1954. The magazines are well-regarded by science fiction historians, 
-        and carried fiction by many writers well known in the field, 
-        or who would later become famous, including Isaac Asimov, 
-        Philip K. Dick, Robert E. Howard, and John Jakes.</p>
+    <em><h1>The meaning of HTML</h1></em>   
+    <p> HTML stands for Hyper Text Markup Language
+        HTML is the standard markup language for creating Web pages
+        HTML describes the structure of a Web page
+        HTML consists of a series of elements
+        HTML elements tell the browser how to display the content
+        HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</p>
+    <em><h2>Example of code in HTML</h2></em>
+    <p>
+        A lot of website use an HTML language to manage text. And a lot of people doesn't 
+        undestand that HTML is basics of website. And to show how does it look to code in HTML,
+        I gived a little example, which is refering to another website. The
+        <a href="https://www.w3schools.com/html/html_intro.asp">Example</a>.
+    </p>
+    <p>
+        But if you have no time to check another website, I put for you a little screenshot,
+        which can help you to see a small part of code in HTML.
+        <img src="HTML code.jpeg" alt="Small part of code from Web">
+    </p>
+    <p>
+        But of course the HTML language can't be used to create the newest websites.
+        And the second language that is used in pair with HTML is CSS.
+    </p>
+    <em><h1>CSS or Cascading Style Sheets</h1></em>
+    <p>
+        <em><strong>CSS stands for Cascading Style Sheets.</strong></em> It describes how Html elements should be displayed on screen. It is a powerful tool 
+        for web designers to change the design and control over web pages that how it should be displayed. It is supported by all 
+        browsers and is designed primarily to separate the document content from document presentation.
+        It was developed by W3C (World Wide Web Consortium) in 1996. 
+        Term cascading in CSS implies the fact that you can apply multiple style sheets to a single web page. Extension used to save 
+        CSS files is ".css".
+    </p>
+    <p>
+        About CSS is explained on next page.
+        To move to that page click on <a href="About_CSS.html">CSS explained in short</a>.
+    </p>
 </body>
 
 
