Moved information from home page to About_CSS

--- a/About_CSS.html
+++ b/About_CSS.html
@@ -9,8 +9,17 @@
 
 
 <body>
-<em><strong><h1>Example of CSS code</h1></strong></em>
 
+<em><h1>CSS or Cascading Style Sheets</h1></em>
+    <p>
+        <em><strong>CSS stands for Cascading Style Sheets.</strong></em> It describes how Html elements should be displayed on screen. It is a powerful tool 
+        for web designers to change the design and control over web pages that how it should be displayed. It is supported by all 
+        browsers and is designed primarily to separate the document content from document presentation.
+        It was developed by W3C (World Wide Web Consortium) in 1996. 
+        Term cascading in CSS implies the fact that you can apply multiple style sheets to a single web page. Extension used to save 
+        CSS files is ".css".
+    </p>
+<em><strong><h1>Example of CSS code</h1></strong></em>
 <p>
     If you want to undestand the basics of CSS of course you can got to special website.
     I would prefer the w3schools website. There are a lot of lessons and code explanations 
