Do some modification with files

--- a/About_CSS.html
+++ b/About_CSS.html
@@ -29,7 +29,7 @@
 <p>
     And if you haven't time to go and watch other websites there a small screenshot
     which shows how does look code in CSS.
-    <img src="CSS_code.png" alt="Example of code in CSS">
+    <img src="IMG/CSS_code.png" alt="Example of code in CSS">
 </p>
 </body>
 
