--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>
         But if you have no time to check another website, I put for you a little screenshot,
         which can help you to see a small part of code in HTML.
-        <img src="HTML code.jpeg" alt="Small part of code from Web">
+        <img src="IMG/HTML code.jpeg" alt="Small part of code from Web">
     </p>
     <p>
         But of course the HTML language can't be used to create the newest websites.
