Something with CSS

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         About CSS is explained on next page.
         To move to that page click on <a href="About_CSS.html">CSS explained in short</a>.
     </p>
+
+    <div>
+    <p>Inside a div</p>
+    </div>
+
+    <div>
+    <p>Inside div2</p>
+    </div>
+
 </body>
 
 
