--- a/About_CSS.html
+++ b/About_CSS.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>CSS explanation</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 
