--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 
 
 <body>
-    <em><h1>The meaning of HTML</h1></em>   
+    <div class="Name_of_page">
+        <em><h1>The meaning of HTML</h1></em>
+    </div>
     <p> HTML stands for Hyper Text Markup Language
         HTML is the standard markup language for creating Web pages
         HTML describes the structure of a Web page
         HTML consists of a series of elements
         HTML elements tell the browser how to display the content
         HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</p>
-    <em><h2>Example of code in HTML</h2></em>
+    <div class="HTML_explaining"><em><h2>Example of code in HTML</h2></em></div>
     <p>
         A lot of website use an HTML language to manage text. And a lot of people doesn't 
         undestand that HTML is basics of website. And to show how does it look to code in HTML,
@@ -28,7 +30,7 @@
         But if you have no time to check another website, I put for you a little screenshot,
         which can help you to see a small part of code in HTML.
     </p>
-    <img src="IMG/HTML code.jpeg" alt="Small part of code from Web">
+    <img src="IMG/HTML code.jpeg" alt="Small part of code from Web" class="CodeHTML">
     <p>
         But of course the HTML language can't be used to create the newest websites.
         And the second language that is used in pair with HTML is CSS.
