--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="Name_of_page">
-        <em><h1>The meaning of HTML</h1></em>
+        <h1 class="Main_text">The meaning of HTML</h1>
     </div>
     <p> HTML stands for Hyper Text Markup Language
         HTML is the standard markup language for creating Web pages
@@ -19,7 +19,7 @@
         HTML consists of a series of elements
         HTML elements tell the browser how to display the content
         HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</p>
-    <div class="HTML_explaining"><em><h2>Example of code in HTML</h2></em></div>
+    <div class="HTML_explaining"><h2>Example of code in HTML</h2></div>
     <p>
         A lot of website use an HTML language to manage text. And a lot of people doesn't 
         undestand that HTML is basics of website. And to show how does it look to code in HTML,
@@ -40,14 +40,6 @@
         About CSS is explained on next page.
         To move to that page click on <a href="About_CSS.html">CSS explained in short</a>.
     </p>
-
-    <div>
-    <p>Inside a div</p>
-    </div>
-
-    <div>
-    <p>Inside div2</p>
-    </div>
 
 </body>
 
