--- a/index.html
+++ b/index.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fix the Cascade</title>
+    <link rel="stylesheet" href="../git_test/CSS/style.css">
+  </head>
+  <body>
+    <p class="para">I'm just a paragraph with extra bold text!</p>
+    <p class="para small-para">I'm a smaller paragraph, also with extra bold text!</p>
 
+    <button id="confirm-button" class="button confirm">Confirm</button>
+    <button id="cancel-button" class="button cancel">Cancel</button>
 
-<head>
-    <meta charset="utf-8">
-    <title>What is HTML</title>
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-
-
-<body>
-    <div class="Name_of_page">
-        <h1 class="Main_text">The meaning of HTML</h1>
+    <div class="text">I'm a div with thin text!</div>
+    <div class="text">I'm a div with thin text and a child div!
+      <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
-    <p> HTML stands for Hyper Text Markup Language
-        HTML is the standard markup language for creating Web pages
-        HTML describes the structure of a Web page
-        HTML consists of a series of elements
-        HTML elements tell the browser how to display the content
-        HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</p>
-    <div class="HTML_explaining"><h2>Example of code in HTML</h2></div>
-    <p>
-        A lot of website use an HTML language to manage text. And a lot of people doesn't 
-        undestand that HTML is basics of website. And to show how does it look to code in HTML,
-        I gived a little example, which is refering to another website. The
-        <a href="https://www.w3schools.com/html/html_intro.asp">Example</a>.
-    </p>
-    <p>
-        But if you have no time to check another website, I put for you a little screenshot,
-        which can help you to see a small part of code in HTML.
-    </p>
-    <img src="IMG/HTML code.jpeg" alt="Small part of code from Web" class="CodeHTML">
-    <p>
-        But of course the HTML language can't be used to create the newest websites.
-        And the second language that is used in pair with HTML is CSS.
-    </p>
-    
-    <p>
-        About CSS is explained on next page.
-        To move to that page click on <a href="About_CSS.html">CSS explained in short</a>.
-    </p>
-
-</body>
-
-
+  </body>
 </html>
